chore(ci): 本地化 Issue 模板并优化 build workflow
本次提交对仓库的贡献者体验和 CI 流程做了若干调整：

- 更新 .github/ISSUE_TEMPLATE 中的多个模板（BUG、功能请求、体验反馈），改进字段结构、标题与说明，使模板更适合中文用户提交问题与反馈。
- 新增 .github/ISSUE_TEMPLATE/config.yml，禁用空白 Issue 并添加交流群联系链接，便于引导非 BUG 类讨论到 QQ 群。
- 调整 .github/workflows/build.yml：将步骤名称与注释本地化为中文、统一命名风格并微调 Node/Java/Gradle 配置；移除基于 ImageMagick 的 Android 图标生成步骤；优化并重命名若干构建与上传产物步骤以提高可读性。

目的：提升中文贡献者填写 Issue 的体验，统一 CI 步骤命名与说明，简化 Android 构建流程的部分繁琐步骤。

--- a/.github/ISSUE_TEMPLATE/反馈建议.md
+++ b/.github/ISSUE_TEMPLATE/反馈建议.md
@@ -1,19 +1,26 @@
 ---
-name: 反馈建议
-about: 为这个项目提出功能建议或改进意见
-title: '[建议] 简要描述您的建议'
-labels: 'enhancement'
+name: 体验反馈
+about: 游戏平衡性、界面体验、文本等方面的改进建议
+title: '[反馈] '
+labels: 'feedback'
 assignees: ''
 ---
 
-**您的建议是什么？**
-请清晰描述您希望添加的功能或改进点
+### 反馈类型
 
-**为什么需要这个功能/改进？**
-说明这个建议会解决什么问题或带来什么价值
+- [ ] 数值 / 平衡性
+- [ ] 界面 / 交互体验
+- [ ] 文本 / 翻译
+- [ ] 其他
 
-**您期望的实现方式（可选）**
-如果有具体的实现想法，可以在这里描述
+### 反馈内容
 
-**附加信息（可选）**
-任何其他有助于理解这个建议的信息
+描述你觉得需要改进的地方。
+
+### 改进建议（可选）
+
+如果有具体的改进思路，请在此说明。
+
+### 截图（可选）
+
+如有相关截图，请粘贴在此。
