--- a/.github/ISSUE_TEMPLATE/功能请求.md
+++ b/.github/ISSUE_TEMPLATE/功能请求.md
@@ -1,19 +1,23 @@
 ---
 name: 功能请求
-about: 请求添加新功能或改进现有功能
-title: '[功能] 简要描述功能'
+about: 提议新增游戏功能或玩法
+title: '[功能] '
 labels: 'enhancement'
 assignees: ''
 ---
 
-**功能描述**
-清晰描述您希望添加的功能
+### 功能描述
 
-**功能背景**
-说明为什么需要这个功能，它能解决什么问题
+描述你希望添加的功能或玩法。
 
-**建议实现方案（可选）**
-如果有具体的实现想法，可以在这里描述
+### 使用场景
 
-**附加信息**
-任何其他有助于理解这个功能的信息
+这个功能解决什么问题？在什么情况下会用到？
+
+### 参考示例（可选）
+
+如果有其他游戏或项目中的类似功能可供参考，请说明。
+
+### 补充信息（可选）
+
+其他有助于理解该功能的截图、草图或说明。
